--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -14,7 +14,8 @@ jobs:
 
       - name: Create XCFramework
         uses: unsignedapps/swift-create-xcframework@v2
-        platforms: ios
+        with:
+          platforms: ios
         
       - name: Create Release
         id: create_release
